# fastapi-celery-redis

./: .env.example  .gitignore  .pylintrc  LICENSE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: Dockerfile
src/api/: config.py  dependencies.py  main.py
src/api/routers/: api.py  operations.py  validations.py
src/api/routers/handlers/: exceptions.py
src/api/schemas/: operations.py  validations.py
src/core/: worker.py
src/modules/: logger.py
