[tool.poetry]
name = "fastapi-celery-redis"
version = "0.1.0"
description = "FastAPI with Celery and Redis for Python projects"
authors = ["Rochii <truchero.roger@gmail.com>"]
maintainers = ["Rochii <truchero.roger@gmail.com>"]
packages = [
    { include = "api", from = "src" },
    { include = "core", from = "src" },
    { include = "modules", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
pydantic = "^1.9.2"
celery = "^5.2.7"
redis = "^4.3.4"
flower = "^1.2.0"
fastapi = "^0.81.0"
mypy = "^0.971"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
bandit = "^1.7.4"
flake8 = "^5.0.4"
black = "^22.6.0"
safety = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
